--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
   <title>DEflow</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-  <!-- jQuery workaround: https://ourcodeworld.com/articles/read/202/how-to-include-and-use-jquery-in-electron-framework -->
+   <!-- jQuery workaround: https://ourcodeworld.com/articles/read/202/how-to-include-and-use-jquery-in-electron-framework -->
   <script>window.$ = window.jQuery = require('./public/lib/jquery/jquery.min.js');</script>
-  <script src="public/lib/jquery/jquery-ui.js"></script>
+  <script src="./public/lib/jquery/jquery-ui.js"></script>
+  
 
   <!-- Draw2d lib -->
   <script src="public/lib/draw2d.js"></script>
