--- a/src/Renderer/template.html
+++ b/src/Renderer/template.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>DEflow</title>
+  <title>DECAD</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <!-- jQuery workaround: https://ourcodeworld.com/articles/read/202/how-to-include-and-use-jquery-in-electron-framework 
   <script>window.$ = window.jQuery = require('../../static/lib/jquery/jquery.min.js');</script> -->
